--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>App Title</title>
+    <script src="config.js"></script>
     <style>
         html, body, body > div, #container, #container-uiarea {
             height: 100%;
